--- a/tablebooking/src/index.css
+++ b/tablebooking/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .primary-btn{
+        @apply bg-primary text-white font-bold px-4 py-2 rounded-full;
+    }
+    .secondary-btn{
+        @apply bg-gray-300 text-white font-bold px-4 py-2 rounded-full;
+    }
+}
