--- a/tablebooking/src/index.css
+++ b/tablebooking/src/index.css
@@ -9,4 +9,10 @@
     .secondary-btn{
         @apply bg-gray-300 text-white font-bold px-4 py-2 rounded-full;
     }
+    @layer utilities{
+        .img-shadow{
+            /* box-shadow: 5px 5px 10px rgba(0,0,0,0.3); */
+            filter: drop-shadow(5px 5px 10px rgba(0,0,0,0.8))
+        }
+    }
 }
