--- a/tablebooking/src/index.css
+++ b/tablebooking/src/index.css
@@ -15,7 +15,7 @@
     }
     @layer utilities{
         .img-shadow{
-            /* box-shadow: 5px 5px 10px rgba(0,0,0,0.3); */
+           
             filter: drop-shadow(5px 5px 10px rgba(0,0,0,0.8))
         }
     }
@@ -25,8 +25,8 @@
         transform: scale(1);
       }
       50% {
-        /* border-color: #f97316; Orange color */
-        transform: scale(1.05); /* Slightly enlarge the element */
+       
+        transform: scale(1.05); 
       }
       100% {
         border-color: transparent;
@@ -40,24 +40,24 @@
 }
 
 
-/* Custom Styles for Toggle Button */
+
 .hamburger-icon {
     @apply text-2xl cursor-pointer sm:hidden;
   }
   
-  /* Custom Styles for Menu on Small Screens */
+
   .mobile-menu {
     @apply flex flex-col absolute top-16 bg-white w-full left-0 p-4 shadow-lg sm:hidden;
   }
   
-/* Custom Styles for Menu Items */
+
 .menu-item {
     @apply hover:shadow-lg p-2 bg-slate-200 rounded hover:border-b-4 border-primary uppercase cursor-pointer font-semibold;
   }
 
-  /* Custom Saffron Color */
+
 .bg-saffron {
-    background-color: #FF9933; /* Saffron color */
+    background-color: #FF9933;
   }
 
   .saffron{
